--- a/client/package.json
+++ b/client/package.json
@@ -11,18 +11,24 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "clipboard": "^2.0.11",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
+    "marked": "^15.0.12",
+    "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.1"
+    "react-router-dom": "^7.6.1",
+    "react-speech-recognition": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@tailwindcss/cli": "^4.1.8",
     "@tailwindcss/vite": "^4.1.8",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-speech-recognition": "^3.9.6",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
