--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@eslint/js": "^9.25.0",
     "@tailwindcss/cli": "^4.1.8",
     "@tailwindcss/vite": "^4.1.8",
+    "@types/node": "^24.0.4",
     "@types/prismjs": "^1.26.5",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
